--- a/Pages/Index.cshtml
+++ b/Pages/Index.cshtml
@@ -6,5 +6,5 @@
 
 <div class="text-center">
     <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+    <p>This is a project made for storing and modifying a simple DnD character sheet.<br /> You need to log in in order to access your sheets (if there are any), or to create new ones.</a>.</p>
 </div>
